<resources>
    <string name="app_name">House Of Design</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home_shopping_cart">Shopping Cart</string>
    <string name="title_activity_container_account">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register new account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short. Password must be 8 characters.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_invalid_auth">Authentication failed.</string>
    <string name="error_invalid_verification">Your account isn\'t verify. Please verify your email address. Check on your mail inbox.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_search">Search</string>
    <string name="title_shipping_address">Shipping Address</string>
    <string name="title_shipping_courier">Shipping Courier</string>


    <array name="array_courier">
        <item>JNE</item>
        <item>TIKI</item>
        <item>Pos Indonesia</item>
    </array>
    <array name="array_gender">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </array>
    <string name="title_activity_xx">xx</string>
    <string name="title_no_data">No data available.</string>
    <string name="orders_tagihan">Tagihan</string>
    <string name="orders_pembelian">Pembelian</string>
    <string name="error_minimum_required_address">Too short. Minimum 10 characters.</string>
    <string name="title_error">Please refresh, some trouble in connection.</string>



    <string name="default_notification_channel_promo" translatable="true">Promo</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>